Use Java 23 getFirst() and getLast() methods everywhere instead of .get(0) and .get(size()-1)
Co-authored-by: commjoen <1457214+commjoen@users.noreply.github.com>